[package]
name = "json2toml"
version = "0.1.0"
authors = ["Yuu Kobayashi <kb10uy@kb10uy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.toml]
version = "0.5"
