[package]
name = "json2toml"
version = "0.2.0"
authors = ["Yuu Kobayashi <kb10uy@kb10uy.org>"]
edition = "2018"

# Sources

[lib]
name = "j2tlib"
path = "src/lib.rs"

[[bin]]
name = "json2toml"
path = "src/json2toml.rs"

[[bin]]
name = "toml2schema"
path = "src/toml2schema.rs"

# Dependencies

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.toml]
version = "0.5"
